--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Indecision App</title>
-        <meta charset="UTF=8">
+				<meta charset="UTF=8">
+				<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="app"></div>
